--- a/Week 4/history.html
+++ b/Week 4/history.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ultimate Frisbee - History</title>
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/hw4.css">
 </head>
 <body>
