Add link to CSS reset

--- a/Week 4/index.html
+++ b/Week 4/index.html
@@ -10,6 +10,8 @@
 <meta charset="UTF-8">
 	
 <title>Ultimate Frisbee - Home</title>
+
+<link rel="stylesheet" href="css/reset.css">
 	
 <link rel="stylesheet" href="css/hw4.css">
 
